@@ -21,6 +21,7 @@ rules-edit: new filter 'service has.only', 'user has', 'user has.regex', 'url.ca
 rules-edit: new filter 'app technology.is', 'app category.is', 'app subcategory.is', 'app characteristic.has xxxx'
 rules-edit: new filter 'service has.from.query' and 'service has.recursive.from.query'
 rules-edit: new filter 'location is.child.of [DG]'
+rules-edit: new filter 'service is.tcp','service is.tcp.only','service is.udp','service is.udp.only','service has.value [PORT_VALUE]','service has.value.recursive [PORT_VALUE]'
 rules-edit: action 'tag-Add-Force' new field 'tagColor' to setColor for forced Tag creation
 rules-edit: action 'description-append' new field 'newline' as boolean parameter no/yes
 rules-edit: action 'display' extend with logsetting information / URL category
